[package]
name = "cbor-cobs"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/strawlab/json-newlines"
description = "A no_std + serde compatible message library for Rust"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["serde", "cobs", "framing"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2", default-features = false }
cobs = { version = "0.2.3", default-features = false }

thiserror = { version = "1.0", default-features = false, optional = true }
bytes = { version = "1.0", optional = true }
defmt = { version = "0.3", optional = true }
tokio-util = { version = "0.7.3", features = ["codec"], optional = true }

[features]
std = ["thiserror", "serde_cbor/std", "cobs/use_std"]
use-defmt = ["defmt"]
codec = ["std", "tokio-util", "bytes"]
